--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-svg": "^16.1.19",
     "sass": "^1.64.2",
     "web-vitals": "^2.1.4"
