--- a/package.json
+++ b/package.json
@@ -52,5 +52,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
-  }
+  },
+  "homepage":"https://miainaus.github.io/react-portfolio/"
+
 }
