--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
-  "homepage":"https://miainaus.github.io/react-portfolio/"
+  "homepage":"https://{miainaus}.github.io/{react-portfolio}"
 
 }
