--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "homepage":"https://miainaus.github.io/react-portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -52,7 +53,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
-  },
-  "homepage":"https://{miainaus}.github.io/{react-portfolio}"
+  }
 
 }
